--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="css\style.css">
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,13 +26,16 @@
         <h1 class="welcome-header__title">Welcome to Kokoa Clone</h1>
         <p class="welcome-header__text">If tou have a Kokoa Account, log in with your email or phone number.</p>
     </header>
-    <form id="login-form">
-        <input type="text" placeholder="Email or phone number">
-        <input type="password" placeholder="Password">
+    <form action="friends.html" method="" id="login-form">
+        <input name="username" type="text" placeholder="Email or phone number">
+        <input name="password" type="password" placeholder="Password">
         <input type="submit" value="Log In">
         <input type="submit" value="Sign Up">
+        <a href="#">Find Kokao Account or Password</a>
     </form >
-    <a href="#">Find Kokao Account or Password</a>
+    <div id="no-mobile">
+        <span>just mobile..!</span>
+    </div>
     <script src="https://kit.fontawesome.com/da925ced24.js" crossorigin="anonymous"></script>
-</body>
+</body> 
 </html>
