--- a/chats.html
+++ b/chats.html
@@ -93,7 +93,7 @@
         </ul>
     </nav>
     <div id="no-mobile">
-        <span>just mobile..!</span>
+        <span>just mobile..! plz</span>
     </div>
     <script src="https://kit.fontawesome.com/da925ced24.js" crossorigin="anonymous"></script>
 </body>
