--- a/chat.html
+++ b/chat.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chats - Kokoa Clone</title>
+    <title>Chatting - Kokoa Clone</title>
 </head>
 <body class="chat-screen" id="inf-chat-screen">
     <div class="status-bar chat-screen">
